--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @bitnation-dev:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=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
+registry=https://registry.npmjs.org/
