--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @bitnation-dev:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
 registry=https://registry.npmjs.org/
