--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @bitnation-dev:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
+//npm.pkg.github.com/:_authToken=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
 registry=https://registry.npmjs.org/
