--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 @bitnation-dev:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN || ''}
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 registry=https://registry.npmjs.org/
